syntax = "proto3";

package chat;

service ChatService {
    rpc SendMessage (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
    string content = 1;
    string role = 2;
    string id = 3;
}

message ChatResponse {
    string reply = 1;
}